--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <body>
     <div class="container">
       <h1>File Structure Generator</h1>
+      <div id="structurePreview"><em>Preview will appear here...</em></div>
+      <div id="feedback"></div>
       <form id="fileStructureForm">
         <label for="fileStructureInput"
           >Enter File Structure (use '/' for folders, maintain indentation for
@@ -18,37 +20,43 @@
           id="fileStructureInput"
           rows="15"
           placeholder="my-large-project/
-          ├── src/
-          │   ├── components/
-          │   │   ├── ComponentA.js
-          │   │   ├── ComponentB.js
-          │   ├── utils/
-          │   │   ├── utilityA.js
-          │   │   ├── utilityB.js
-          │   ├── services/
-          │   │   ├── serviceA.js
-          │   │   ├── serviceB.js
-          ├── tests/
-          │   ├── ComponentA.test.js
-          │   ├── ComponentB.test.js
-          ├── config/
-          │   ├── webpack.config.js
-          │   ├── babel.config.js
-          ├── scripts/
-          │   ├── build.js
-          │   ├── start.js
-          ├── public/
-          │   ├── index.html
-          │   ├── favicon.ico
-          ├── .gitignore
-          ├── README.md
-          ├── package.json
-          ├── package-lock.json
-          └── LICENSE
-          "
+├── src/
+│   ├── components/
+│   │   ├── ComponentA.js
+│   │   ├── ComponentB.js
+│   ├── utils/
+│   │   ├── utilityA.js
+│   │   ├── utilityB.js
+│   ├── services/
+│   │   ├── serviceA.js
+│   │   ├── serviceB.js
+├── tests/
+│   ├── ComponentA.test.js
+│   ├── ComponentB.test.js
+├── config/
+│   ├── webpack.config.js
+│   ├── babel.config.js
+├── scripts/
+│   ├── build.js
+│   ├── start.js
+├── public/
+│   ├── index.html
+│   ├── favicon.ico
+├── .gitignore
+├── README.md
+├── package.json
+├── package-lock.json
+└── LICENSE
+"
         ></textarea>
         <button type="submit">Generate Files</button>
       </form>
+      <button
+        type="button"
+        id="resetBtn"
+        style="display:none;"
+        >Create Another Structure</button
+      >
       <div id="downloadLinkContainer" style="display: none">
         <a id="downloadLink" href="#" download="file_structure.zip"
           >Download File Structure</a
